test/events/invalidValues/name.js
export const eventHandler = {
    name: "validName",
    isOnce: false,
    isPrepend: 1,
    execute: async function () {},
};
